--- a/marine_condervative.html
+++ b/marine_condervative.html
@@ -4,6 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Your Website</title>
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -15,7 +16,7 @@
     <header>
         <nav class="container">
             <ul class="nav-links">
-                <li><a href="/mine.html">Back Home</a></li>
+                <li><a href="index.html">Back Home</a></li>
                 <li><a href="/wisdom.html">Wisdom</a></li>
                 <li><a href="/way_of_life.html">War of life</a></li>
                 <li><a href="/Community_product.html">Community product</a></li>
